force-app/main/default/objects/Opening__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Openings</relationshipLabel>
        <relationshipName>Openings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_at__c</fullName>
        <label>Closed at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Greenhouse_io_ID__c</fullName>
        <label>Greenhouse.io ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opened_at__c</fullName>
        <label>Opened at</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opening</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opening Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Openings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>